WDGCA-3 Fix input size to fit on mobile

--- a/src/component/login/login.module.scss
+++ b/src/component/login/login.module.scss
@@ -148,7 +148,7 @@ a:hover {
   }
 
   .header {
-    padding: 40px 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
   }
 
   .formItem {
